<resources>
    <string name="app_name">Sim Job</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="backendless_app_id">4544EF96-F9D5-0921-FF41-B8C2DFBEC100</string>
    <string name="backendless_android_api_key">6CD10E7F-1F72-7563-FF94-4E5DA5E59A00</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
 completions."    </string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up!</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="name">Name</string>
    <string name="sign_me_up">Sign Me Up!</string>
    <string name="cancel_sign_up">Cancel Sign Up</string>
    <string name="authentication_error_title">User Authentication Error!</string>
    <string name="empty_field_signup_error">Be sure you have entered a valid email address, password, and name.</string>
    <string name="title_activity_start_page">StartPage</string>
    <string name="clicktomakemoney">Click To Make Money</string>
    <string name="zero_0">zero_0</string>
    <string name="about">About</string>
    <string name="shop">Shop</string>
    <string name="title_activity_shop_page">ShopPage</string>
    <string name="home">Home</string>
    <string name="title_activity_about">About</string>

</resources>
